tests/paczka2/big_fuzzy/36291502.err
Error in line 14: lud1ohfa S143 58,3
Error in line 36: bdJeIKqGr A445 15,0
Error in line 32: LoxY A458 96,8
Error in line 38: A458 S357 48,1
Error in line 35: iFdBXRe A445 34,4
Error in line 41: A458 A445 5,5
Error in line 59: A458 S357 17,9
Error in line 77: bDyhRYe S357 81,3
Error in line 93: LoxY S357 62,3
Error in line 96: LoxY S143 48,1
Error in line 109: lud1ohfa A458 68,0
Error in line 112: A458 A445 1867
Error in line 107: A458 A445 41,3
Error in line 98: bDyhRYe S143 349,4
Error in line 133: iFdBXRe S143 194,0
Error in line 144: A458 A445 100,8
Error in line 126: lud1ohfa A458 189,4
Error in line 152: A458 A458 92,5
Error in line 150: bDyhRYe S357 12,7
Error in line 161: bDyhRYe A445 69,8
Error in line 162: bDyhRYe S357 55,2
Error in line 170: iFdBXRe S357 86,5
Error in line 183: LoxY A445 84,8
Error in line 191: LoxY A445 76,7
Error in line 200: lud1ohfa S143 74,0
Error in line 201: 0LCaPV4sCbY A445 57,3
Error in line 208: bdJeIKqGr S143 73,6
Error in line 219: A458 S143 63,6
Error in line 224: bDyhRYe A445 214,04
Error in line 217: LoxY S143 70,0
Error in line 220: A458 A458 69,5
Error in line 226: LoxY S357 10,2
Error in line 222: bDyhRYe A445 80,6
Error in line 240: 0LCaP$4sCbY A445 25,2
Error in line 230: LoxY A458 82,1
Error in line 242: iFdBXRe A458 9,4
Error in line 249: bDyhRYe S143 278,84
